# realXdeal_game

./: Cargo.toml
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  rpc.rs  service.rs
pallets/game/: Cargo.toml
pallets/game/src/: benchmarking.rs  functions.rs  lib.rs  mock.rs  offchain_function.rs  properties.rs  tests.rs  types.rs  weights.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs
seed/: pallet_balance.json
